--- a/en.html
+++ b/en.html
@@ -69,10 +69,11 @@
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <img src="images/bauer.jpg">
+          <!-- image designed by Futa Takahashi -->
+          <img src="images/lina.png">
           <p class="work-detail">
-          <span class="work-title">agent.bauer</span><br><br>
-            The facebook fake account finder.
+          <span class="work-title">Lina</span><br><br>
+            A steganography program to hide a file into multiple png images.
           </p>
         </div>
         <div class="work" ontouchstart="">
