--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ var languages = window.navigator.languages || [
          window.navigator.browserLanguage
       ];
       if (!languages.includes("ja-JP")) {
-        location.href = "/en";
+//        location.href = "/en";
       }
     </script>
     <div class="name-section">
@@ -77,11 +77,11 @@ var languages = window.navigator.languages || [
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <img src="images/bauer.jpg">
+          <!-- image designed by Futa Takahashi -->
+          <img src="images/lina.png">
           <p class="work-detail">
-          <span class="work-title">agent.bauer</span><br><br>
-            Facebookなりすまし自動発見Bot.
-            自身が被害にあった時に活躍した.
+          <span class="work-title">Lina</span><br><br>
+          複数の写真に分割してデータを隠せるステガノグラフィプログラム
           </p>
         </div>
         <div class="work" ontouchstart="">
