--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@ var languages = window.navigator.languages || [
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <!-- image designed by Futa Takahashi -->
-          <img src="images/lina.png">
-          <p class="work-detail">
-          <span class="work-title">Lina</span><br><br>
-          複数の写真に分割してデータを隠せるステガノグラフィプログラム
-          </p>
+          <a href="https://github.com/TakutoYoshikai/lina" target="_blank">
+            <!-- image designed by Futa Takahashi -->
+            <img src="images/lina.png">
+            <p class="work-detail">
+            <span class="work-title">Lina</span><br><br>
+            複数の写真に分割してデータを隠せるステガノグラフィプログラム
+            </p>
+          </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/nats" target="_blank">
