--- a/en.html
+++ b/en.html
@@ -69,12 +69,14 @@
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <!-- image designed by Futa Takahashi -->
-          <img src="images/lina.png">
-          <p class="work-detail">
-          <span class="work-title">Lina</span><br><br>
-            A steganography program to hide a file into multiple png images.
-          </p>
+          <a href="https://github.com/TakutoYoshikai/lina" target="_blank">
+            <!-- image designed by Futa Takahashi -->
+            <img src="images/lina.png">
+            <p class="work-detail">
+            <span class="work-title">Lina</span><br><br>
+              A steganography program to hide a file into multiple png images.
+            </p>
+          </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/nats" target="_blank">
