--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@ var languages = window.navigator.languages || [
       </div>
       <div class="row">
         <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/viking-challenge" target="_blank">
-            <img src="images/thinkpad.jpg">
+          <a href="https://yoshikai.net/cowake" target="_blank">
+            <img src="images/cowake.png">
             <p class="work-detail">
-            <span class="work-title">Viking Challenge</span><br><br>
-              王様達のヴァイキング第5巻に登場したvalkyrijaとzer0のプログラムを誰でも作って試せるシステム
+            <span class="work-title">COWAKÉ</span><br><br>
+              ZOOMのブレイクアウトルームを複数回行うときに同じ人と同じグループにならない組み合わせを生成するアプリケーション
             </p>
           </a>
         </div>
