--- a/en.html
+++ b/en.html
@@ -91,11 +91,11 @@
       </div>
       <div class="row">
         <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/viking-challenge" target="_blank">
-            <img src="images/thinkpad.jpg">
+          <a href="https://yoshikai.net/cowake/en" target="_blank">
+            <img src="images/cowake.png">
             <p class="work-detail">
-            <span class="work-title">Viking Challenge</span><br><br>
-              A simulation of Japanese comic 「Kings Viking」valkyrja's money laundering program.
+            <span class="work-title">COWAKÉ</span><br><br>
+              COWAKÉ is an application used to make breakout rooms on ZOOM.
             </p>
           </a>
         </div>
