--- a/en.html
+++ b/en.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="name-section">
-      <p class="name">TAKUTO YOSHIKAI</p>
+      <p class="name"><span id="ch1">T</span>A<span id="ch2">K</span>U<span id="ch3">T</span>O YOSHIKAI</p>
       <p class="job">SOFTWARE CREATOR / HACKER</p>
     </div>
     <div class="works">
