--- a/en.html
+++ b/en.html
@@ -138,6 +138,35 @@
           </a>
         </div>
         <div class="work" ontouchstart="">
+          <a href="https://github.com/TakutoYoshikai/rcjs" target="_blank">
+            <img src="images/github.png">
+            <p class="work-detail">
+              <span class="work-title">rcjs</span>
+              rcjs is a simple remote controller framework.
+            </p>
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="work" ontouchstart="">
+          <a href="https://github.com/TakutoYoshikai/silver" target="_blank">
+            <img src="images/github.png">
+            <p class="work-detail">
+            <span class="work-title">SILVER</span><br><br>
+              A set of Takuto Yoshikai's hack tools.
+            </p>
+          </a>
+        </div>
+        <div class="work" ontouchstart="">
+          <a href="https://github.com/TakutoYoshikai/phalanx" target="_blank">
+            <img src="images/github.png">
+            <p class="work-detail">
+              <span class="work-title">phalanx</span><br><br>
+              phalanx is a powerful password manager.
+            </p>
+          </a>
+        </div>
+        <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/portfolio-github" target="_blank">
             <img src="images/github.png">
             <p class="work-detail">
