--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ var languages = window.navigator.languages || [
          window.navigator.browserLanguage
       ];
       if (!languages.includes("ja-JP")) {
-        location.href = "/en";
+        //location.href = "/en";
       }
     </script>
     <div class="name-section">
@@ -142,6 +142,35 @@ var languages = window.navigator.languages || [
             <p class="work-detail">
               <span class="work-title">Hack for Spring</span><br><br>
               新型コロナウイルスによって休校になった小中学生向けオンラインプログラミング講義.
+            </p>
+          </a>
+        </div>
+        <div class="work" ontouchstart="">
+          <a href="https://github.com/TakutoYoshikai/rcjs" target="_blank">
+            <img src="images/github.png">
+            <p class="work-detail">
+            <span class="work-title">rcjs</span><br><br>
+              リモートコントローラフレームワーク
+            </p>
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="work" ontouchstart="">
+          <a href="https://github.com/TakutoYoshikai/silver" target="_blank">
+            <img src="images/github.png">
+            <p class="work-detail">
+            <span class="work-title">SILVER</span><br><br>
+              Takuto Yoshikaiのハックツール
+            </p>
+          </a>
+        </div>
+        <div class="work" ontouchstart="">
+          <a href="https://github.com/TakutoYoshikai/phalanx" target="_blank">
+            <img src="images/github.png">
+            <p class="work-detail">
+              <span class="work-title">phalanx</span><br><br>
+              パワフルなパスワードマネージャー
             </p>
           </a>
         </div>
