--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ var languages = window.navigator.languages || [
          window.navigator.browserLanguage
       ];
       if (!languages.includes("ja-JP")) {
-        //location.href = "/en";
+        location.href = "/en";
       }
     </script>
     <div class="name-section">
