--- a/en.html
+++ b/en.html
@@ -141,7 +141,7 @@
           <a href="https://github.com/TakutoYoshikai/rcjs" target="_blank">
             <img src="images/github.png">
             <p class="work-detail">
-              <span class="work-title">rcjs</span>
+            <span class="work-title">rcjs</span><br><br>
               rcjs is a simple remote controller framework.
             </p>
           </a>
