--- a/en.html
+++ b/en.html
@@ -14,13 +14,17 @@
     <meta name="description" content="SOFTWARE CREATOR / HACKER">
     <title>Takuto Yoshikai</title>
     <style>
-      .profile-section > p {
+      .profile-section > p:not(.profile-title) {
         font-size: 14px!important;
-        letter-spacing: 1px!important;
+        letter-spacing: 0px!important;
+      }
+      .profile-title {
+        font-size: 18px!important;
       }
       .work-detail {
         letter-spacing: 1px!important;
       }
+
     </style>
   </head>
   <body>
