--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <meta name="keywords" content="吉開拓人,TakutoYoshikai,コードアカデミー">
     <meta name="description" content="SOFTWARE CREATOR / HACKER">
     <title>Takuto Yoshikai</title>
+    <style>
+      .profile-section > p:not(.profile-title) {
+        font-size: 14px!important;
+        letter-spacing: 0px!important;
+      }
+      .profile-title {
+        font-size: 18px!important;
+      }
+      .work-detail {
+        letter-spacing: 1px!important;
+      }
+
+    </style>
   </head>
   <body>
     <script>
@@ -207,10 +220,6 @@ var languages = window.navigator.languages || [
       <p class="profile-title">Contact</p>
       <p>
         takuto@yoshikai.net
-      </p>
-      <p class="profile-title">About me</p>
-      <p>
-        <a href="/interview.html" style="text-decoration: underline;">プロフィールページ</a>
       </p>
     </div>
   </body>
