--- a/en.html
+++ b/en.html
@@ -196,11 +196,7 @@
         automation<br>
         machine learning<br>
         blockchain<br>
-      </p>
-      <p class="profile-title">Awards</p>
-      <p>
-        vinclu hackathon championship<br>
-        ExtremeHomeHack: LittleBits award, Yahoo myThings award, Macnica award, NEC PC award
+        <a href="https://takutoyoshikai.github.io/skills" class="read-more">Read more...</a>
       </p>
       <p class="profile-title">Contact</p>
       <p>
