--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ var languages = window.navigator.languages || [
          window.navigator.browserLanguage
       ];
       if (!languages.includes("ja-JP")) {
-        location.href = "/en";
+        //location.href = "/en";
       }
     </script>
     <div class="name-section">
@@ -211,11 +211,7 @@ var languages = window.navigator.languages || [
         自動化<br>
         機械学習<br>
         ブロックチェーン<br>
-      </p>
-      <p class="profile-title">Awards</p>
-      <p>
-      ウィンクルハッカソン優勝<br>
-      ExtremeHomeHack LittleBits賞, Yahoo myThings賞, Macnica賞, NEC PC賞<br>
+        <a href="https://takutoyoshikai.github.io/skills" class="read-more">Read more...</a>
       </p>
       <p class="profile-title">Contact</p>
       <p>
