--- a/en.html
+++ b/en.html
@@ -190,12 +190,12 @@
       </p>
       <p class="profile-title">Skills</p>
       <p>
-        server side development<br>
-        frontend web development<br>
-        iOS app development<br>
-        automation<br>
-        machine learning<br>
-        blockchain<br>
+        Server Side Development<br>
+        Frontend Web Development<br>
+        iOS App Development<br>
+        Automation<br>
+        Machine Learning<br>
+        Blockchain<br>
         <a href="https://takutoyoshikai.github.io/skills" class="read-more">Read more...</a>
       </p>
       <p class="profile-title">Contact</p>
