--- a/en.html
+++ b/en.html
@@ -37,28 +37,28 @@
         <div class="work" ontouchstart="">
           <a href="https://gatebox.ai" target="_blank">
             <img src="images/gatebox.jpg">
-            <p class="work-detail">
-              <span class="work-title">Gatebox</span><br><br>
-              The virtual home robot. I developed prototype of Gatebox.
-            </p>
+            <div class="work-detail">
+            <span class="work-title">Gatebox</span>
+            <p>The virtual home robot. I developed prototype of Gatebox.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://www.tankore.jp/service.html" target="_blank">
             <img src="images/tankore.png">
-            <p class="work-detail">
-              <span class="work-title">Tankore</span><br><br>
-              The community service for university students. I developed server side of this.
-            </p>
+            <div class="work-detail">
+              <span class="work-title">Tankore</span>
+              <p>The community service for university students. I developed server side of this.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://dengen-cafe.com" target="_blank">
             <img src="images/dengencafe.png">
-            <p class="work-detail">
-              <span class="work-title">DENGENCAFE</span><br><br>
-              The application to find cafes that have outlets. I developed smartphone application. 
-            </p>
+            <div class="work-detail">
+              <span class="work-title">DENGENCAFE</span>
+              <p>The application to find cafes that have outlets. I developed smartphone application. </p>
+            </div>
           </a>
         </div>
       </div>
@@ -66,30 +66,30 @@
         <div class="work" ontouchstart="">
           <a href="https://yoshikai.net/HONJA" target="_blank">
             <img src="images/honja.png">
-            <p class="work-detail">
-            <span class="work-title">HONJA</span><br><br>
-              The Nihongo Transliterator. I developed this with Akira Yoshikai.
-            </p>
+            <div class="work-detail">
+            <span class="work-title">HONJA</span>
+            <p>The Nihongo Transliterator. I developed this with Akira Yoshikai.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/lina" target="_blank">
             <!-- image designed by Futa Takahashi -->
             <img src="images/lina.png">
-            <p class="work-detail">
-            <span class="work-title">Lina</span><br><br>
-              A steganography program to hide a file into multiple png images.
-            </p>
+            <div class="work-detail">
+            <span class="work-title">Lina</span>
+            <p>A steganography program to hide a file into multiple png images.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/nats" target="_blank">
             <!-- image designed by @callme_2323 -->
             <img src="images/nats.png" style="background-color:#BCBD8B">
-            <p class="work-detail">
-            <span class="work-title">nats</span><br><br>
-              A program to hide file into executable binary 
-            </p>
+            <div class="work-detail">
+              <span class="work-title">nats</span>
+              <p>A program to hide file into executable binary.</p>
+            </div>
           </a>
         </div>
       </div>
@@ -97,28 +97,28 @@
         <div class="work" ontouchstart="">
           <a href="https://yoshikai.net/cowake/en" target="_blank">
             <img src="images/cowake.png">
-            <p class="work-detail">
-            <span class="work-title">COWAKÉ</span><br><br>
-              COWAKÉ is an application used to make breakout rooms on ZOOM.
-            </p>
+            <div class="work-detail">
+            <span class="work-title">COWAKÉ</span>
+            <p>COWAKÉ is an application used to make breakout rooms on ZOOM.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/conan" target="_blank">
             <img src="https://cdn-ak.f.st-hatena.com/images/fotolife/u/under-mogura/20180514/20180514151844.jpg">
-            <p class="work-detail">
-            <span class="work-title">Conan</span><br><br>
-            This is a system to identify online anonymous people.
-            </p>
+            <div class="work-detail">
+            <span class="work-title">Conan</span>
+            <p>This is a system to identify online anonymous people.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/gaiax/oreki" target="_blank">
             <img src="images/oreki.png">
-              <p class="work-detail">
-              <span class="work-title">Oreki</span><br><br>
-                Original Endpoint Sales Kit
-              </p>
+              <div class="work-detail">
+              <span class="work-title">Oreki</span>
+              <p>Original Endpoint Sales Kit</p>
+              </div>
           </a>
         </div>
       </div>
@@ -126,28 +126,28 @@
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/tsystem-core" target="_blank">
             <img src="images/tsystem.png">
-            <p class="work-detail">
-            <span class="work-title">tsystem</span><br><br>
-              Backup・Sync・Reset・MakeUp System on PC
-            </p>
+            <div class="work-detail">
+              <span class="work-title">tsystem</span>
+              <p>Backup・Sync・Reset・MakeUp System on PC</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://prtimes.jp/main/html/rd/p/000000053.000008167.html" target="_blank">
             <img src="images/hfs2.png">
-            <p class="work-detail">
-              <span class="work-title">Hack for Spring</span><br><br>
-              An online programming lesson for elementary and middle school students.
-            </p>
+            <div class="work-detail">
+              <span class="work-title">Hack for Spring</span>
+              <p>An online programming lesson for elementary and middle school students.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/rcjs" target="_blank">
             <img src="images/github.png">
-            <p class="work-detail">
-            <span class="work-title">rcjs</span><br><br>
-              rcjs is a simple remote controller framework.
-            </p>
+            <div class="work-detail">
+            <span class="work-title">rcjs</span>
+            <p>rcjs is a simple remote controller framework.</p>
+            </div>
           </a>
         </div>
       </div>
@@ -155,27 +155,27 @@
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/silver" target="_blank">
             <img src="images/github.png">
-            <p class="work-detail">
-            <span class="work-title">SILVER</span><br><br>
-              A set of Takuto Yoshikai's hack tools.
-            </p>
+            <div class="work-detail">
+            <span class="work-title">SILVER</span>
+            <p>A set of Takuto Yoshikai's hack tools.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/phalanx" target="_blank">
             <img src="images/github.png">
-            <p class="work-detail">
-              <span class="work-title">phalanx</span><br><br>
-              phalanx is a powerful password manager.
-            </p>
+            <div class="work-detail">
+              <span class="work-title">phalanx</span>
+              <p>phalanx is a powerful password manager.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/portfolio-github" target="_blank">
             <img src="images/github.png">
-            <p class="work-detail">
+            <div class="work-detail">
               <span class="work-title">Other works, tools</span>
-            </p>
+            </div>
           </a>
         </div>
       </div>
