--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ var languages = window.navigator.languages || [
          window.navigator.browserLanguage
       ];
       if (!languages.includes("ja-JP")) {
-        location.href = "/en";
+        //location.href = "/en";
       }
     </script>
     <div class="name-section">
@@ -51,30 +51,30 @@ var languages = window.navigator.languages || [
         <div class="work" ontouchstart="">
           <a href="https://gatebox.ai" target="_blank">
             <img src="images/gatebox.jpg">
-            <p class="work-detail">
-              <span class="work-title">Gatebox</span><br><br>
-              2次元のキャラクターと暮らせるバーチャルホームロボット. プロトタイプのソフトウェア開発に携わりました.
-            </p>
+            <div class="work-detail">
+              <span class="work-title">Gatebox</span>
+              <p>2次元のキャラクターと暮らせるバーチャルホームロボット. プロトタイプのソフトウェア開発に携わりました.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://www.tankore.jp/service.html" target="_blank">
             <img src="images/tankore.png">
-            <p class="work-detail">
-              <span class="work-title">たんこれ</span><br><br>
-              大学の単位取得にまつわる情報戦を勝ち抜くサービス.
-              サーバーサイド開発を担当しました.
-            </p>
+            <div class="work-detail">
+              <span class="work-title">たんこれ</span>
+              <p>大学の単位取得にまつわる情報戦を勝ち抜くサービス.
+              サーバーサイド開発を担当しました.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://dengen-cafe.com" target="_blank">
             <img src="images/dengencafe.png">
-            <p class="work-detail">
-              <span class="work-title">電源カフェ</span><br><br>
-              電源のあるカフェを探せるアプリ.
-              スマホアプリ開発・Webフロント開発に携わりました.
-            </p>
+            <div class="work-detail">
+              <span class="work-title">電源カフェ</span>
+              <p>電源のあるカフェを探せるアプリ.
+              スマホアプリ開発・Webフロント開発に携わりました.</p>
+            </div>
           </a>
         </div>
       </div>
@@ -82,31 +82,31 @@ var languages = window.navigator.languages || [
         <div class="work" ontouchstart="">
           <a href="https://yoshikai.net/HONJA" target="_blank">
             <img src="images/honja.png">
-            <p class="work-detail">
-            <span class="work-title">HONJA</span><br><br>
-              多言語ひらがな翻字サービス.
-              吉開章と共同開発.
-            </p>
+            <div class="work-detail">
+            <span class="work-title">HONJA</span>
+            <p>多言語ひらがな翻字サービス.
+            吉開章と共同開発.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/lina" target="_blank">
             <!-- image designed by Futa Takahashi -->
             <img src="images/lina.png">
-            <p class="work-detail">
-            <span class="work-title">Lina</span><br><br>
-            複数の写真に分割してデータを隠せるステガノグラフィプログラム
-            </p>
+            <div class="work-detail">
+            <span class="work-title">Lina</span>
+            <p>複数の写真に分割してデータを隠せるステガノグラフィプログラム</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/nats" target="_blank">
             <!-- image designed by @callme_2323 -->
             <img src="images/nats.png" style="background-color:#BCBD8B">
-            <p class="work-detail">
-            <span class="work-title">nats</span><br><br>
-              実行ファイルにデータを隠せるステガノグラフィプログラム
-            </p>
+            <div class="work-detail">
+            <span class="work-title">nats</span>
+            <p>実行ファイルにデータを隠せるステガノグラフィプログラム</p>
+            </div>
           </a>
         </div>
       </div>
@@ -114,28 +114,28 @@ var languages = window.navigator.languages || [
         <div class="work" ontouchstart="">
           <a href="https://yoshikai.net/cowake" target="_blank">
             <img src="images/cowake.png">
-            <p class="work-detail">
-            <span class="work-title">COWAKÉ</span><br><br>
-              ZOOMのブレイクアウトルームを複数回行うときに同じ人と同じグループにならない組み合わせを生成するアプリケーション
-            </p>
+            <div class="work-detail">
+            <span class="work-title">COWAKÉ</span>
+            <p>ZOOMのブレイクアウトルームを複数回行うときに同じ人と同じグループにならない組み合わせを生成するアプリケーション</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/conan" target="_blank">
             <img src="https://cdn-ak.f.st-hatena.com/images/fotolife/u/under-mogura/20180514/20180514151844.jpg">
-            <p class="work-detail">
-            <span class="work-title">Conan</span><br><br>
-              インターネット上の匿名で嫌がらせをしてくる人を特定するシステム
-            </p>
+            <div class="work-detail">
+            <span class="work-title">Conan</span>
+            <p>インターネット上の匿名で嫌がらせをしてくる人を特定するシステム</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/gaiax/oreki" target="_blank">
             <img src="images/oreki.png">
-              <p class="work-detail">
-              <span class="work-title">Oreki</span><br><br>
-                Original Endpoint Sales Kit
-              </p>
+              <div class="work-detail">
+              <span class="work-title">Oreki</span>
+              <p>Original Endpoint Sales Kit</p>
+              </div>
           </a>
         </div>
       </div>
@@ -143,28 +143,28 @@ var languages = window.navigator.languages || [
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/tsystem-core" target="_blank">
             <img src="images/tsystem.png">
-            <p class="work-detail">
-            <span class="work-title">tsystem</span><br><br>
-              PC Backup・Sync・Reset・MakeUpシステム.
-            </p>
+            <div class="work-detail">
+            <span class="work-title">tsystem</span>
+            <p>PC Backup・Sync・Reset・MakeUpシステム.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://prtimes.jp/main/html/rd/p/000000053.000008167.html" target="_blank">
             <img src="images/hfs2.png">
-            <p class="work-detail">
-              <span class="work-title">Hack for Spring</span><br><br>
-              新型コロナウイルスによって休校になった小中学生向けオンラインプログラミング講義.
-            </p>
+            <div class="work-detail">
+              <span class="work-title">Hack for Spring</span>
+              <p>新型コロナウイルスによって休校になった小中学生向けオンラインプログラミング講義.</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/rcjs" target="_blank">
             <img src="images/github.png">
-            <p class="work-detail">
-            <span class="work-title">rcjs</span><br><br>
-              リモートコントローラフレームワーク
-            </p>
+            <div class="work-detail">
+            <span class="work-title">rcjs</span>
+            <p>リモートコントローラフレームワーク</p>
+            </div>
           </a>
         </div>
       </div>
@@ -172,27 +172,27 @@ var languages = window.navigator.languages || [
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/silver" target="_blank">
             <img src="images/github.png">
-            <p class="work-detail">
-            <span class="work-title">SILVER</span><br><br>
-              Takuto Yoshikaiのハックツール
-            </p>
+            <div class="work-detail">
+            <span class="work-title">SILVER</span>
+            <p>Takuto Yoshikaiのハックツール</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/phalanx" target="_blank">
             <img src="images/github.png">
-            <p class="work-detail">
-              <span class="work-title">phalanx</span><br><br>
-              パワフルなパスワードマネージャー
-            </p>
+            <div class="work-detail">
+              <span class="work-title">phalanx</span>
+              <p>パワフルなパスワードマネージャー</p>
+            </div>
           </a>
         </div>
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/portfolio-github" target="_blank">
             <img src="images/github.png">
-            <p class="work-detail">
+            <div class="work-detail">
               <span class="work-title">その他作品</span>
-            </p>
+            </div>
           </a>
         </div>
       </div>
