--- a/en.html
+++ b/en.html
@@ -154,7 +154,7 @@
       <div class="row">
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/silver" target="_blank">
-            <img src="images/github.png">
+            <img src="images/silver.png">
             <div class="work-detail">
             <span class="work-title">SILVER</span>
             <p>A set of Takuto Yoshikai's hack tools.</p>
