--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ var languages = window.navigator.languages || [
       <div class="row">
         <div class="work" ontouchstart="">
           <a href="https://github.com/TakutoYoshikai/silver" target="_blank">
-            <img src="images/github.png">
+            <img src="images/silver.png">
             <div class="work-detail">
             <span class="work-title">SILVER</span>
             <p>Takuto Yoshikaiのハックツール</p>
