--- a/en.html
+++ b/en.html
@@ -183,10 +183,10 @@
     <div class="profile-section" style="width:300px">
       <p class="profile-title">School</p>
       <p>
-      Code Academy High School (Japan)
+      Code Academy High School
       </p>
       <p>
-      Keio University (Japan)
+      Keio University
       </p>
       <p class="profile-title">Skills</p>
       <p>
