info@yoshikai.net

--- a/en.html
+++ b/en.html
@@ -171,7 +171,7 @@
       </p>
       <p class="profile-title">Contact</p>
       <p>
-        takuto@yoshikai.net
+        info@yoshikai.net
       </p>
     </div>
   </body>
