--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ var languages = window.navigator.languages || [
       </p>
       <p class="profile-title">Contact</p>
       <p>
-        takuto@yoshikai.net
+        info@yoshikai.net
       </p>
     </div>
   </body>
