--- a/en.html
+++ b/en.html
@@ -159,6 +159,10 @@
       <p>
       Keio University
       </p>
+      <p class="profile-title">Dev Groups</p>
+      <p>
+        <a href="https://3hacks.net" class="dev-group">3hacks.net</a>
+      </p>
       <p class="profile-title">Skills</p>
       <p>
         Server Side Development<br>
