--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@ var languages = window.navigator.languages || [
       <a href="https://code.ac.jp">コードアカデミー高等学校</a><br>
       慶應義塾大学総合政策学部
       </p>
+      <p class="profile-title">Dev Groups</p>
+      <p><a href="https://3hacks.net" class="dev-group">3hacks.net</a></p>
       <p class="profile-title">Skills</p>
       <p>
         サーバーサイド<br>
