--- a/en.html
+++ b/en.html
@@ -113,11 +113,11 @@
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/gaiax/oreki" target="_blank">
-            <img src="images/oreki.png">
+          <a href="https://github.com/3hacks" target="_blank">
+            <img src="images/3hacks.png">
               <div class="work-detail">
-              <span class="work-title">Oreki</span>
-              <p>Original Endpoint Sales Kit</p>
+              <span class="work-title">3hacks.net</span>
+              <p>3hacks is a team for development open source projects.</p>
               </div>
           </a>
         </div>
