--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ var languages = window.navigator.languages || [
          window.navigator.browserLanguage
       ];
       if (!languages.includes("ja-JP")) {
-        location.href = "/en";
+        //location.href = "/en";
       }
     </script>
     <div class="name-section">
@@ -130,11 +130,11 @@ var languages = window.navigator.languages || [
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/gaiax/oreki" target="_blank">
-            <img src="images/oreki.png">
+          <a href="https://github.com/3hacks" target="_blank">
+            <img src="images/3hacks.png">
               <div class="work-detail">
-              <span class="work-title">Oreki</span>
-              <p>Original Endpoint Sales Kit</p>
+              <span class="work-title">3hacks.net</span>
+              <p>オープンソース開発グループ</p>
               </div>
           </a>
         </div>
