--- a/en.html
+++ b/en.html
@@ -113,7 +113,7 @@
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/3hacks" target="_blank">
+          <a href="https://3hacks.net" target="_blank">
             <img src="images/3hacks.png">
               <div class="work-detail">
               <span class="work-title">3hacks.net</span>
