--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ var languages = window.navigator.languages || [
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/3hacks" target="_blank">
+          <a href="https://3hacks.net" target="_blank">
             <img src="images/3hacks.png">
               <div class="work-detail">
               <span class="work-title">3hacks.net</span>
