--- a/en.html
+++ b/en.html
@@ -173,6 +173,9 @@
       <p>
         info@yoshikai.net
       </p>
+      <p>
+        <a href="https://yoshikai.net/gpg.pub">GPG Public Key</a>
+      </p>
     </div>
   </body>
 </html>
