--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@ var languages = window.navigator.languages || [
       <p>
         info@yoshikai.net
       </p>
+      <p>
+        <a href="https://yoshikai.net/gpg.pub">GPG Public Key</a>
+      </p>
     </div>
   </body>
 </html>
