--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ var languages = window.navigator.languages || [
         info@yoshikai.net
       </p>
       <p>
-        <a href="https://yoshikai.net/gpg.pub">GPG Public Key</a>
+        <a href="https://yoshikai.net/gpg.pub" class="gpg">GPG Public Key</a>
       </p>
     </div>
   </body>
