--- a/en.html
+++ b/en.html
@@ -174,7 +174,7 @@
         info@yoshikai.net
       </p>
       <p>
-        <a href="https://yoshikai.net/gpg.pub">GPG Public Key</a>
+        <a href="https://yoshikai.net/gpg.pub" class="gpg">GPG Public Key</a>
       </p>
     </div>
   </body>
