--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ var languages = window.navigator.languages || [
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/portfolio-github" target="_blank">
+          <a href="https://github.com/TakutoYoshikai" target="_blank">
             <img src="images/github.png">
             <div class="work-detail">
               <span class="work-title">その他作品</span>
