--- a/en.html
+++ b/en.html
@@ -142,7 +142,7 @@
           </a>
         </div>
         <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/portfolio-github" target="_blank">
+          <a href="https://github.com/TakutoYoshikai" target="_blank">
             <img src="images/github.png">
             <div class="work-detail">
               <span class="work-title">Other works, tools</span>
