--- a/nuru/index.html
+++ b/nuru/index.html
@@ -5,15 +5,8 @@
     <link rel="stylesheet" href="./index.css">
     <script src="index.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta property="og:url" content="https://yoshikai.net/index.html">
-    <meta property="og:title" content="TAKUTO YOSHIKAI">
-    <meta property="og:image" content="https://yoshikai.net/images/ogp2.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="SOFTWARE CREATOR / HACKER">
-    <meta name="keywords" content="吉開拓人,TakutoYoshikai,コードアカデミー">
-    <meta name="description" content="SOFTWARE CREATOR / HACKER">
     <meta name="robots" content="noindex,nofollow" />
-    <title>Takuto Yoshikai</title>
+    <title>Happy Birthday Nuru!</title>
     <style>
       .profile-section > p:not(.profile-title) {
         font-size: 14px!important;
