--- a/en.html
+++ b/en.html
@@ -29,7 +29,9 @@
   </head>
   <body>
     <div class="name-section">
-      <p class="name"><span id="ch1">T</span>A<span id="ch2">K</span>U<span id="ch3">T</span>O YOSHIKAI</p>
+      <div class="names">
+        <p class="name" id="name">LUCKS</p>
+      </div>
       <p class="job">SOFTWARE CREATOR / HACKER</p>
     </div>
     <div class="works">
