--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ var languages = window.navigator.languages || [
       }
     </script>
     <div class="name-section">
-      <p class="name"><span id="ch1">T</span>A<span id="ch2">K</span>U<span id="ch3">T</span>O YOSHIKAI</p>
+      <p class="name" id="name">LUCKS</p>
       <p class="job">SOFTWARE CREATOR / HACKER</p>
     </div>
     <div class="works">
