--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
-    <link rel="stylesheet" href="./index.css">
-    <script src="index.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" content="https://yoshikai.net/index.html">
     <meta property="og:title" content="TAKUTO YOSHIKAI">
@@ -13,175 +11,11 @@
     <meta name="twitter:description" content="SOFTWARE CREATOR / HACKER">
     <meta name="keywords" content="吉開拓人,TakutoYoshikai,コードアカデミー">
     <meta name="description" content="SOFTWARE CREATOR / HACKER">
+    <meta http-equiv="refresh" content="0;url=https://lit.link/takutoyoshikai">
     <title>Takuto Yoshikai</title>
     <style>
-      .profile-section > p:not(.profile-title) {
-        font-size: 14px!important;
-        letter-spacing: 0px!important;
-      }
-      .profile-title {
-        font-size: 18px!important;
-      }
-      .work-detail {
-        letter-spacing: 1px!important;
-      }
-
     </style>
   </head>
   <body>
-    <div class="name-section">
-      <div class="names">
-        <p class="name" id="name"><span id="chloe">T</span>AKUTO YOSHIKAI</p>
-      </div>
-      <p class="job" id="job">SOFTWARE CREATOR / HACKER</p>
-    </div>
-    <h2 class="latest-title"> - Latest Works - </h2>
-    <div class="works">
-      <div class="row">
-        <div class="work" ontouchstart="">
-          <a href="https://www.djangoproject.com/weblog/2022/jul/04/security-releases/" target="_blank">
-            <img src="images/django.png">
-            <div class="work-detail">
-            <span class="work-title">CVE-2022-34265</span>
-            <p>SQL Injection vulnerability in Django.</p>
-            </div>
-          </a>
-        </div>
-        <div class="work" ontouchstart="">
-          <a href="https://github.com/aeyesec/CVE-2022-34265" target="_blank">
-            <img src="images/github.png">
-            <div class="work-detail">
-            <span class="work-title">PoC for CVE-2022-34265</span>
-            <p>Aeye Security Lab official PoC for CVE-2022-34265</p>
-            </div>
-          </a>
-        </div>
-        <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/tsystem-core" target="_blank">
-            <img src="images/tsystem.png">
-            <div class="work-detail">
-              <span class="work-title">TSYSTEM</span>
-              <p>Backup・Sync・Reset・MakeUp System on PC</p>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-    <h2 class="past-title"> - Previous Works - </h2>
-    <div class="works">
-      <div class="row">
-        <div class="work" ontouchstart="">
-          <a href="https://gatebox.ai" target="_blank">
-            <img src="images/gatebox.jpg">
-            <div class="work-detail">
-            <span class="work-title">Gatebox</span>
-            <p>The virtual home robot. I developed prototype of Gatebox.</p>
-            </div>
-          </a>
-        </div>
-        <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/lina" target="_blank">
-            <!-- image designed by Futa Takahashi -->
-            <img src="images/lina.png">
-            <div class="work-detail">
-              <span class="work-title">Lina</span>
-              <p>A steganography program to hide a file into multiple png images.
-            </div>
-          </a>
-        </div>
-        <div class="work" ontouchstart="">
-          <a href="https://dengen-cafe.com" target="_blank">
-            <img src="images/dengencafe.png">
-            <div class="work-detail">
-              <span class="work-title">DENGENCAFE</span>
-              <p>The application to find cafes that have outlets. I developed smartphone application. </p>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="work" ontouchstart="">
-          <a href="https://yoshikai.net/HONJA" target="_blank">
-            <img src="images/honja.png">
-            <div class="work-detail">
-            <span class="work-title">HONJA</span>
-            <p>The Nihongo Transliterator. I developed this with Akira Yoshikai.</p>
-            </div>
-          </a>
-        </div>
-        <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/nats" target="_blank">
-            <!-- image designed by @callme_2323 -->
-            <img src="images/nats.png" style="background-color:#BCBD8B">
-            <div class="work-detail">
-              <span class="work-title">nats</span>
-              <p>A program to hide file into executable binary.</p>
-            </div>
-          </a>
-        </div>
-        <div class="work" ontouchstart="">
-          <a href="https://prtimes.jp/main/html/rd/p/000000053.000008167.html" target="_blank">
-            <img src="images/hfs2.png">
-            <div class="work-detail">
-              <span class="work-title">Hack for Spring</span>
-              <p>An online programming lesson for elementary and middle school students.</p>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="work" ontouchstart="">
-          <a href="https://yoshikai.net/cowake/en" target="_blank">
-            <img src="images/cowake.png">
-            <div class="work-detail">
-            <span class="work-title">COWAKÉ</span>
-            <p>COWAKÉ is an application used to make breakout rooms on ZOOM.</p>
-            </div>
-          </a>
-        </div>
-        <div class="work" ontouchstart="">
-          <a href="https://github.com/TakutoYoshikai/silver" target="_blank">
-            <img src="images/silver.png">
-            <div class="work-detail">
-            <span class="work-title">SILVER</span>
-            <p>A set of Takuto Yoshikai's hack tools.</p>
-            </div>
-          </a>
-        </div>
-        <div class="work" ontouchstart="">
-          <a href="https://3hacks.net" target="_blank">
-            <img src="images/3hacks.png">
-              <div class="work-detail">
-              <span class="work-title">3hacks.net</span>
-              <p>3hacks is a team for development open source projects.</p>
-              </div>
-          </a>
-        </div>
-      </div>
-      <div class="row">
-      </div>
-    </div>
-    <div class="profile-section" style="width:300px">
-      <p class="profile-title">School</p>
-      <p>
-      Keio University
-      </p>
-      <p class="profile-title">Skills</p>
-      <p>
-        Web Development<br>
-        Mobile App Development<br>
-        Automation<br>
-        Cyber Security<br>
-        Blockchain<br>
-        <a href="https://takutoyoshikai.github.io/skills" class="read-more">Read more...</a>
-      </p>
-      <p class="profile-title">Contact</p>
-      <p>
-        info@yoshikai.net
-      </p>
-      <p>
-        <a href="https://linktr.ee/takutoyoshikai" class="mysns">My SNS</a>
-      </p>
-    </div>
   </body>
 </html>
