--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ a:link, a:visited {
     color: inherit; /* 親要素の色を継承 */
     text-decoration: none; /* 下線をなくす場合 */
 }
+* {
+
+  font-family: "Yu Gothic", "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
+}
 
 header {
   height: 4rem;
@@ -24,7 +28,6 @@ header {
   padding-bottom: 60px;
 }
       header h2 {
-        font-family: 'A1ゴシック M JIS2004';
         font-size: 18px;
         font-weight: 600;
         color: #555555;
