--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ a:link, a:visited {
 }
 * {
 
-  font-family: "Yu Gothic", "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
+  font-family: "Yu Gothic", "Meiryo", sans-serif;
 }
 
 header {
