スマホサイズでnavを非表示

--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@ header {
       }
 
 
+      @media (max-width: 768px) {
+          nav {
+              display: none;
+          }
+      }
     </style>
     <script>
       function calculateAge(birthDate) {
