--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="keywords" content="吉開拓人,TakutoYoshikai,コードアカデミー">
     <meta name="description" content="SOFTWARE CREATOR / HACKER">
     <title>ソフトウェア技術者 吉開 拓人</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <style>
 a:link, a:visited {
     color: inherit; /* 親要素の色を継承 */
