mediaクエリ対応

--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@ header {
 
 
       @media (max-width: 768px) {
+         main > div {
+           margin-top: 0px;
+         }
+         #profile h2 {
+           margin-top: 0;
+         }
           nav {
               display: none;
           }
