細かいstyle調整

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@ header {
         text-align: center;
       }
 
+      main > div {
+        margin-bottom: 160px;
+      }
       #profile {
         text-align: center;
       }
@@ -139,6 +142,10 @@ header {
 
       footer {
         text-align: center;
+      }
+
+      footer p {
+        font-size: 12px;
       }
 
 
@@ -260,7 +267,7 @@ header {
         
         <div id="contact" data-aos="fade-up" data-aos-duration="1400">
             <h2>お問い合わせ</h2>
-            <p><a href="https://facebook.com/takuto.yoshikai">Facebook</a> <a href="mailto:takuto.yoshikai@gmail.com">Email</a> <a href="https://linkedin.com/in/takutoyoshikai">LinkedIn</a></p>
+            <p><a href="https://facebook.com/takuto.yoshikai">Facebook</a> ・ <a href="mailto:takuto.yoshikai@gmail.com">Email</a> ・ <a href="https://linkedin.com/in/takutoyoshikai">LinkedIn</a></p>
         </div>
     </main>
 
