--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ a:link, a:visited {
   font-family: "Yu Gothic", "Meiryo", sans-serif;
 }
 
+b {
+  color: #555;
+}
+
 header {
   height: 4rem;
   padding-top: 60px;
