headタグ内の整理

--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" content="https://yoshikai.net/index.html">
     <meta property="og:title" content="TAKUTO YOSHIKAI">
     <meta property="og:image" content="https://yoshikai.net/images/ogp2.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="SOFTWARE CREATOR / HACKER">
-    <meta name="keywords" content="吉開拓人,TakutoYoshikai,コードアカデミー">
-    <meta name="description" content="SOFTWARE CREATOR / HACKER">
+    <meta name="twitter:description" content="ソフトウェア技術者 吉開 拓人">
+    <meta name="keywords" content="吉開拓人,TakutoYoshikai">
+    <meta name="description" content="ソフトウェア技術者 吉開 拓人">
     <title>ソフトウェア技術者 吉開 拓人</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -277,7 +276,7 @@ header {
     </main>
 
     <footer>
-        <p>Copyright 2024 3hacks Takuto Yoshikai</p>
+        <p>Copyright 2024 3hacks 吉開 拓人</p>
     </footer>
 </body>
 </html>
