--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" content="https://yoshikai.net/index.html">
     <meta property="og:title" content="TAKUTO YOSHIKAI">
-    <meta property="og:image" content="https://yoshikai.net/images/ogp2.png">
+    <meta property="og:image" content="https://yoshikai.net/img/ogp.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description" content="ソフトウェア技術者 吉開 拓人">
     <meta name="keywords" content="吉開拓人,TakutoYoshikai">
