--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ header {
         
         <div id="work" data-aos="fade-up" data-aos-duration="1400">
             <h2>仕事のご相談</h2>
-            <p class="status">現在の状況: <b>残り1案件引き受け可能 ✅</b></p>
+            <p class="status">現在の状況: <b>現在業務委託での案件をお引き受けできない状況です。 ❌</b></p>
             <div class="section">
               <h2 class="sub-title">現在受託可能なお仕事</h2>
               <ul>
