--- a/en/index.html
+++ b/en/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta property="og:url" content="https://yoshikai.net/index.html">
+    <meta property="og:url" content="https://yoshikai.net/en/index.html">
     <meta property="og:title" content="TAKUTO YOSHIKAI">
     <meta property="og:image" content="https://yoshikai.net/img/ogp.png">
     <meta name="twitter:card" content="summary_large_image">
@@ -201,7 +201,7 @@ header {
     <main class="container">
         <div id="profile">
             <h2>Profile</h2>
-            <img src="./img/takuto-meshi.png">
+            <img src="../img/takuto-meshi.png">
             <p>Born in 1997 (Age <script>document.write(calculateAge(new Date(1997, 11, 13)))</script>)<br>Graduated from Keio University, Faculty of Policy Management<br>Specialty: IT system development</p>
 
             <div class="greeting" data-aos="fade-up" data-aos-duration="1400">
