--- a/index.html
+++ b/index.html
@@ -267,6 +267,13 @@ header {
                 <li>GCP・AWS</li>
               </ul>
             </div>
+            <div class="section">
+              <h2 class="sub-title">業務でやりとり可能な言語</h2>
+              <ul>
+                <li>日本語</li>
+                <li>英語</li>
+              </ul>
+            </div>
         </div>
         
         <div id="contact" data-aos="fade-up" data-aos-duration="1400">
