--- a/en/index.html
+++ b/en/index.html
@@ -266,6 +266,13 @@ If you are considering realizing services utilizing cutting-edge technology, fee
                 <li>GCP・AWS</li>
               </ul>
             </div>
+            <div class="section">
+              <h2 class="sub-title">Languages</h2>
+              <ul>
+                <li>English</li>
+                <li>Japanese</li>
+              </ul>
+            </div>
         </div>
         
         <div id="contact" data-aos="fade-up" data-aos-duration="1400">
