--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ header {
     <main class="container">
         <div id="profile">
             <h2>プロフィール</h2>
-            <img src="./img/takuto-meshi.png">
+            <img src="./img/takuto-office.jpg">
             <p>1997年生まれ（現在<script>document.write(calculateAge(new Date(1997, 11, 13)))</script>歳）<br>慶應義塾大学 総合政策学部卒<br>専門: ITシステムの開発</p>
 
             <div class="greeting" data-aos="fade-up" data-aos-duration="1400">
