--- a/en/index.html
+++ b/en/index.html
@@ -200,7 +200,7 @@ header {
 
     <main class="container">
         <div id="profile">
-            <img src="../img/takuto-meshi.png">
+            <img src="../img/takuto-office.jpg">
             <p>Born in 1997 (Age <script>document.write(calculateAge(new Date(1997, 11, 13)))</script>)<br>Graduated from Keio University, Faculty of Policy Management<br>Specialty: IT system development</p>
 
             <div class="greeting" data-aos="fade-up" data-aos-duration="1400">
